[gd_scene load_steps=50 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/guns/pistol shooting/2.png" type="Texture" id=2]
[ext_resource path="res://assets/guns/pistol shooting/6.png" type="Texture" id=3]
[ext_resource path="res://assets/guns/pistol shooting/5.png" type="Texture" id=4]
[ext_resource path="res://assets/body/walk anim/1.png" type="Texture" id=5]
[ext_resource path="res://assets/body/walk anim/2.png" type="Texture" id=6]
[ext_resource path="res://assets/body/body idle/3.png" type="Texture" id=7]
[ext_resource path="res://assets/body/body idle/6.png" type="Texture" id=8]
[ext_resource path="res://assets/emots/normal head idle/1.png" type="Texture" id=9]
[ext_resource path="res://assets/body/body idle/1.png" type="Texture" id=10]
[ext_resource path="res://assets/body/walk anim/4.png" type="Texture" id=11]
[ext_resource path="res://assets/body/body idle/2.png" type="Texture" id=12]
[ext_resource path="res://assets/body/body idle/5.png" type="Texture" id=13]
[ext_resource path="res://assets/body/body idle/4.png" type="Texture" id=14]
[ext_resource path="res://assets/body/walk anim/3.png" type="Texture" id=15]
[ext_resource path="res://assets/emots/normal head idle/4.png" type="Texture" id=16]
[ext_resource path="res://assets/body/walk anim/5.png" type="Texture" id=17]
[ext_resource path="res://assets/emots/normal head idle/3.png" type="Texture" id=18]
[ext_resource path="res://assets/guns/pistol shooting/4.png" type="Texture" id=19]
[ext_resource path="res://assets/guns/pistol shooting/7.png" type="Texture" id=20]
[ext_resource path="res://assets/emots/normal head idle/2.png" type="Texture" id=21]
[ext_resource path="res://assets/guns/pistol shooting/3.png" type="Texture" id=22]
[ext_resource path="res://assets/guns/pistol shooting/1.png" type="Texture" id=23]
[ext_resource path="res://assets/guns/pistol shooting/8.png" type="Texture" id=24]
[ext_resource path="res://assets/guns/AK-47 shooting/5.png" type="Texture" id=25]
[ext_resource path="res://assets/guns/AK-47 shooting/3.png" type="Texture" id=26]
[ext_resource path="res://assets/guns/AK-47 shooting/1.png" type="Texture" id=27]
[ext_resource path="res://assets/guns/pistol shooting/9.png" type="Texture" id=28]
[ext_resource path="res://assets/guns/AK-47 shooting/4.png" type="Texture" id=29]
[ext_resource path="res://assets/guns/shotgun shoot/6.png" type="Texture" id=30]
[ext_resource path="res://assets/guns/shotgun shoot/3.png" type="Texture" id=31]
[ext_resource path="res://assets/guns/shotgun shoot/2.png" type="Texture" id=32]
[ext_resource path="res://assets/emots/madness idle/2.png" type="Texture" id=33]
[ext_resource path="res://assets/emots/madness idle/1.png" type="Texture" id=34]
[ext_resource path="res://assets/guns/AK-47 shooting/2.png" type="Texture" id=35]
[ext_resource path="res://assets/guns/shotgun shoot/7.png" type="Texture" id=36]
[ext_resource path="res://assets/guns/shotgun shoot/1.png" type="Texture" id=37]
[ext_resource path="res://assets/emots/madness idle/3.png" type="Texture" id=38]
[ext_resource path="res://assets/emots/madness idle/4.png" type="Texture" id=39]
[ext_resource path="res://assets/guns/shotgun shoot/5.png" type="Texture" id=40]
[ext_resource path="res://assets/guns/shotgun shoot/4.png" type="Texture" id=41]
[ext_resource path="res://scenes/DeathParticle.tscn" type="PackedScene" id=42]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.93781
height = 12.8177

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 17 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 33 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "madness_idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 2 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 28 ) ],
"loop": false,
"name": "shooting_pistol",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 35 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 25 ) ],
"loop": false,
"name": "rifle_shooting",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 37 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 30 ), ExtResource( 36 ) ],
"loop": false,
"name": "shotgun_shooting",
"speed": 5.0
} ]

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 135.798, 158.739 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
camera_speed = 25.0

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MainCamera" type="Camera2D" parent="."]
current = true
process_mode = 0
limit_left = 100
limit_top = 0
limit_bottom = 600
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="Cursor" type="Position2D" parent="."]

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 25, 0 )

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( 0, 5 )
frames = SubResource( 2 )
frame = 4
playing = true
flip_h = true

[node name="Head" type="AnimatedSprite" parent="Body"]
position = Vector2( 0.445435, -12.6953 )
frames = SubResource( 3 )
animation = "madness_idle"
frame = 3
playing = true
flip_h = true

[node name="Pistol" type="AnimatedSprite" parent="Body"]
visible = false
position = Vector2( 10, -3 )
frames = SubResource( 4 )
animation = "shooting_pistol"
flip_h = true

[node name="Rifle" type="AnimatedSprite" parent="Body"]
position = Vector2( 7, -3 )
frames = SubResource( 5 )
animation = "rifle_shooting"
flip_h = true

[node name="Shotgun" type="AnimatedSprite" parent="Body"]
visible = false
position = Vector2( 3, -4 )
frames = SubResource( 6 )
animation = "shotgun_shooting"
flip_h = true

[node name="HitDetectionArea" type="Area2D" parent="."]

[node name="HitDetectionBox" type="CollisionShape2D" parent="HitDetectionArea"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Body")
anims/idle = SubResource( 7 )

[node name="GunTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="SoundEffectPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="DeathParticle" parent="." instance=ExtResource( 42 )]
visible = false
position = Vector2( -0.233429, -3.23164 )
[connection signal="area_entered" from="HitDetectionArea" to="." method="_on_HitDetectionArea_area_entered"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
